docs: add comprehensive README.md